# codereview

./: .gitignore  Cargo.toml  README.md
docs/: CONFIGURATION.md  ROADMAP.md  phpcs-integration-spec.md
src/: cli.rs  init.rs  lib.rs  logging.rs  main.rs  runtime.rs  session.rs
src/agent/: client.rs  mod.rs  run.rs  tools.rs
src/config/: mod.rs
src/credentials/: mod.rs
src/db/: mod.rs
src/git/: mod.rs  tests.rs  testutil.rs
src/language/: mod.rs  rules.rs
src/onboarding/: error.rs  mod.rs  progress.rs  run.rs  run_tests.rs  state.rs  testutil.rs
src/onboarding/step_tests/: steps.rs
src/onboarding/steps/: done.rs  mod.rs  model_selection.rs  ollama_check.rs  preferences.rs  repo_platform.rs  team_config.rs  welcome.rs
src/output/: annotations.rs  json.rs  markdown.rs  mod.rs  terminal.rs
src/platform/: mod.rs
src/repl/: commands.rs  mod.rs
src/review/: cache.rs  chunking.rs  claims.rs  engine.rs  linter.rs  mod.rs  models.rs  parser.rs  phpcs.rs  prompt.rs  source.rs  testutil.rs  verify.rs
src/review/agents/: accessibility.rs  bugs.rs  config_defined.rs  custom.rs  mod.rs  orchestrator.rs  security.rs  style.rs  twig.rs
