[package]
name = "code-review"
version = "0.1.0"
edition = "2024"
description = "AI-powered local code review using Ollama"

[dependencies]
# CLI & REPL
clap = { version = "4", features = ["derive"] }
rustyline = "17"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# YAML config (NOT serde_yaml — deprecated)
yaml_serde = "0.10"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Ollama
ollama-rs = { version = "0.2", features = ["stream"] }

# Git
git2 = "0.20"

# HTTP (for auth flows)
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "5"

# GitHub & GitLab API
octocrab = "0.44"

# Credential storage
keyring-core = "1"

# System info (RAM, CPU detection)
sysinfo = { version = "0.34", default-features = false, features = ["system"] }

# Cross-platform directories
dirs = "6"

# Terminal UI
crossterm = "0.28"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = "1"
